--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,7 +9,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{ site.baseurl }}/">{{ site.title }}</a>
+            <a class="navbar-brand" target = "_blank" href="http://stab-iitb.org">STAB</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
